--- a/widget/package.json
+++ b/widget/package.json
@@ -1,8 +1,21 @@
 {
   "name": "chat-widget",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "dev": "rollup -c -w"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "rollup": "^4.6.1",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "tslib": "^2.8.1"
   }
 }
+
