--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "joi": "^17.11.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^7.2.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "mysql2": "^3.6.5",
+    "morgan": "^1.10.1",
+    "mysql2": "^3.15.3",
     "uuid": "^9.0.1",
     "ws": "^8.18.3"
   },
