--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,20 @@
 FROM nginx:alpine
-COPY default.conf /etc/nginx/conf.d/
+
+# Install openssl for self-signed certificates
+RUN apk add --no-cache openssl
+
+# Create SSL directory
+RUN mkdir -p /etc/ssl/private /etc/ssl/certs
+
+# Generate self-signed SSL certificate
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -keyout /etc/ssl/private/nginx-selfsigned.key \
+    -out /etc/ssl/certs/nginx-selfsigned.crt \
+    -subj "/C=US/ST=State/L=City/O=Organization/OU=Department/CN=localhost"
+
+# Copy nginx configuration
+COPY default.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80 443
+
+CMD ["nginx", "-g", "daemon off;"]
