fix: Use docker compose instead of docker-compose

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -71,11 +71,11 @@ jobs:
     # Docker Build Validation
     - name: Build Docker Images
       run: |
-        docker-compose build
+        docker compose build
 
     - name: Validate Docker Compose
       run: |
-        docker-compose config
+        docker compose config
 
   security-scan:
     runs-on: ubuntu-latest
