--- a/admin-ui/Dockerfile
+++ b/admin-ui/Dockerfile
@@ -1,7 +1,27 @@
-FROM node:18-alpine
+FROM node:18-alpine as build
 WORKDIR /app
+
+# Copy package files
 COPY package*.json ./
-RUN npm install
+RUN npm ci
+
+# Copy source code
 COPY . .
+
+# Use build args passed from docker-compose
+ARG REACT_APP_API_URL
+ARG REACT_APP_WS_URL  
+ARG REACT_APP_CDN_URL
+
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+ENV REACT_APP_WS_URL=$REACT_APP_WS_URL
+ENV REACT_APP_CDN_URL=$REACT_APP_CDN_URL
+
+RUN npm run build
+
+# Production stage
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD ["nginx", "-g", "daemon off;"]
