--- a/admin-ui/nginx.conf
+++ b/admin-ui/nginx.conf
@@ -1,8 +1,15 @@
 server {
-    listen 80;
+    listen 3000;
+    server_name _;  # ← ACCEPT ALL HOSTS
+    
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
+        
+        # CORS headers
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+        add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
     }
 }
