--- a/agent-ui/Dockerfile
+++ b/agent-ui/Dockerfile
@@ -1,7 +1,22 @@
-FROM node:18-alpine
+FROM node:18-alpine as build
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install
+RUN npm ci
+
 COPY . .
-EXPOSE 3000
-CMD ["npm", "start"]
+
+# Use build args passed from docker-compose
+ARG REACT_APP_API_URL
+ARG REACT_APP_WS_URL
+
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+ENV REACT_APP_WS_URL=$REACT_APP_WS_URL
+
+RUN npm run build
+
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 3002
+CMD ["nginx", "-g", "daemon off;"]
