--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -10,7 +10,7 @@ RUN mkdir -p /etc/ssl/private /etc/ssl/certs
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/ssl/private/nginx-selfsigned.key \
     -out /etc/ssl/certs/nginx-selfsigned.crt \
-    -subj "/C=US/ST=State/L=City/O=Organization/OU=Department/CN=localhost"
+    -subj "/C=US/ST=State/L=City/O=Organization/OU=Department/CN=192.168.100.124"
 
 # Copy nginx configuration
 COPY default.conf /etc/nginx/conf.d/default.conf
