--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,35 +1,49 @@
 server {
     listen 80;
-    server_name localhost;
-    return 301 https://$server_name$request_uri;
+    server_name _;  # ← ACCEPT ALL HOSTS
+    return 301 https://$host$request_uri;  # ← FIXED: Use $host instead of $server_name
 }
 
 server {
     listen 443 ssl;
-    server_name localhost;
+    server_name _;  # ← ACCEPT ALL HOSTS
 
-    # Self-signed SSL for development
-    ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-    
+    # SSL Configuration
+    ssl_certificate /etc/ssl/selfsigned.crt;
+    ssl_certificate_key /etc/ssl/selfsigned.key;
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
 
-    # Security Headers
-    add_header Strict-Transport-Security "max-age=63072000" always;
-    add_header X-Frame-Options DENY always;
-    add_header X-Content-Type-Options nosniff always;
+    # Security headers
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
 
-    # API routes
+    # Static files - Widget
+    location /widget.js {
+        alias /var/www/static/widget.js;
+        add_header Content-Type application/javascript;
+        add_header Access-Control-Allow-Origin *;
+    }
+
+    location /test-widget.html {
+        alias /var/www/static/test-widget.html;
+        add_header Content-Type text/html;
+    }
+
+    # API Proxy
     location /api/ {
         proxy_pass http://server:5000/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 
-    # WebSocket proxy
+    # WebSocket Proxy
     location /ws/ {
         proxy_pass http://server:5000/ws/;
         proxy_http_version 1.1;
@@ -42,47 +56,29 @@ server {
         proxy_read_timeout 86400;
     }
 
-    # Serve widget.js directly
-    location /widget.js {
-        alias /var/www/static/widget.js;
-        add_header Content-Type application/javascript;
-        expires 1h;
-        add_header Cache-Control "public";
-    }
-
-    # Serve test-widget.html directly  
-    location /test-widget.html {
-        alias /var/www/static/test-widget.html;
-        add_header Content-Type text/html;
-        expires 1h;
-        add_header Cache-Control "public";
-    }
-
-    # Agent UI - proxy ALL requests to React dev server
+    # Agent UI
     location /agent/ {
-        proxy_pass http://agent-ui:3000/agent/;
+        proxy_pass http://agent-ui:3002/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # React dev server needs these
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_cache_bypass $http_upgrade;
     }
 
-    # Admin UI - proxy ALL requests to React dev server  
+    # Admin UI (catch-all)
     location / {
         proxy_pass http://admin-ui:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # React dev server needs these
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_cache_bypass $http_upgrade;
     }
 }
