--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,36 +1,34 @@
 server {
     listen 80;
-    server_name _;  # ← ACCEPT ALL HOSTS
-    return 301 https://$host$request_uri;  # ← FIXED: Use $host instead of $server_name
-}
-
-server {
-    listen 443 ssl;
-    server_name _;  # ← ACCEPT ALL HOSTS
-
-    # SSL Configuration
-    ssl_certificate /etc/ssl/selfsigned.crt;
-    ssl_certificate_key /etc/ssl/selfsigned.key;
-    ssl_protocols TLSv1.2 TLSv1.3;
-
-    # Security headers
-    add_header X-Frame-Options DENY;
-    add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block";
-
-    # Static files - Widget
-    location /widget.js {
-        alias /var/www/static/widget.js;
-        add_header Content-Type application/javascript;
-        add_header Access-Control-Allow-Origin *;
+    server_name localhost;
+    
+    # Admin UI (http://localhost:3000)
+    location / {
+        proxy_pass http://admin-ui:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
-
-    location /test-widget.html {
-        alias /var/www/static/test-widget.html;
-        add_header Content-Type text/html;
+    
+    # Agent UI (http://localhost:3002)
+    location /agent {
+        proxy_pass http://agent-ui:3002/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
-
-    # API Proxy
+    
+    # API Backend (http://localhost:5000/api)
     location /api/ {
         proxy_pass http://server:5000/api/;
         proxy_http_version 1.1;
@@ -42,8 +40,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
     }
-
-    # WebSocket Proxy
+    
+    # WebSocket (ws://localhost:5000)
     location /ws/ {
         proxy_pass http://server:5000/ws/;
         proxy_http_version 1.1;
@@ -55,30 +53,17 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_read_timeout 86400;
     }
-
-    # Agent UI
-    location /agent/ {
-        proxy_pass http://agent-ui:3002/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
+    
+    # Widget.js file
+    location /widget.js {
+        alias /var/www/static/widget.js;
+        add_header Content-Type application/javascript;
+        add_header Access-Control-Allow-Origin *;
     }
-
-    # Admin UI (catch-all)
-    location / {
-        proxy_pass http://admin-ui:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
+    
+    # Test widget HTML
+    location /test-widget.html {
+        alias /var/www/static/test-widget.html;
+        add_header Content-Type text/html;
     }
 }
